correction letter-spacing num. tel. header IE8

--- a/web/css/vacancesdirectes/layout.less
+++ b/web/css/vacancesdirectes/layout.less
@@ -27,6 +27,7 @@ header, section, footer {position:relative;}
     }
   }
 }
+.ie-lte9 #telephone span span{letter-spacing:-1px;}
 /* specifs home */
 .home #telephone{clear:both;}
 
